test/tests/SuperclassNotFirst.frost
interface Interface {
}

class Super {
}

class SuperclassNotFirst : Interface, Super {
}